# hospital_system

./: .env.example  .gitignore  README.md  hospital.db  pyproject.toml
data/: hospital.db
src/hospital_system/: __init__.py  db.py  exceptions.py  models.py  repositories.py  seed.py  services.py
src/hospital_system/presentation/: __init__.py  streamlit_app.py
